2004-06-21  Anders Carlsson  <andersca@gnome.org>

	* cellrenderer.c: (procman_cell_renderer_progress_get_type),
	(procman_cell_renderer_progress_init),
	(procman_cell_renderer_progress_class_init),
	(procman_cell_renderer_progress_get_property),
	(procman_cell_renderer_progress_set_property),
	(procman_cell_renderer_progress_get_size),
	(procman_cell_renderer_progress_new),
	(procman_cell_renderer_progress_render),
	(procman_cell_renderer_progress_finalize):
	* cellrenderer.h:
	* interface.c: (create_sys_view):
	Rename GtkCellRendererProgress to ProcmanCellRendererProgress,

2004-05-29  Kevin Vandersloot <kfv101 psu edu>

	* proctable.c: simplify to process table code a lot. Should allow for easier addition
	of new features

2004-03-20  Kevin Vandersloot <kfv101 psu edu>

	* callbacks.c: take into account the block size to determine disk sizes.

2004-02-11  Kevin Vandersloot

	* callbacks.c: Fix bad free that may cause crashes. From
	bug #134136. Thanks to Michael Wilson for pointing out
	problem. Also fix freeing of gnome-icon-theme to not generate
	errors

2004-02-03  Paolo Borelli  <pborelli@katamail.com>

	* callbacks.[ch] (cb_proc_combo_changed): new.
	* interface.c (create_proc_view): port from optionmenu to combo.
	* procman.h: update enum.
	* proctable.c: update for the above.

2004-01-24  Paolo Borelli  <pborelli@katamail.com>

	* callbacks.[ch] (cb_tree_popup_menu): handle the popup_menu signal.
	(cb_tree_row_activated): use the activate-row signal instead of 
	manually checking for double click.
	* interface.c (do_popup_menu): update for the above changes.
	* proctable.c (proctable_new): connect the callbacks.

2004-01-07  Glynn Foster  <glynn.foster@sun.com>

	* interface.c: (create_main_window): remove _with_mnemonic when it's 
	not being used for that purpose.
	* procdialogs.c: (procdialog_create_preferences_dialog): remove 
	_with_mnemonic when it's not being used for that purpose. Fixes #130666.

2003-11-26  Kevin Vandersloot 
