@@ -1,3 +1,11 @@
+2004-12-11  Benoît Dejean  <tazforever@dlfp.org>
+
+	* src/callbacks.c: (get_icon_for_device), (add_new_disks): Doesn't crash if
+        gnome_vfs_volume_monitor_get_volume_for_path returns NULL.
+        Closes #160560.
+        
+        * src/procman.c: (main): Added missing gnome-vfs init/shutdown.
+
 2004-06-21  Anders Carlsson  <andersca@gnome.org>
 
 	* cellrenderer.c: (procman_cell_renderer_progress_get_type),
